Fixed overflow handeling
The menu and tabbar are not displayed correctly.

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -33,6 +33,7 @@ div.tab button.active {
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+    max-height: calc(100vh - 50px - 14px);
     min-height: calc(100vh - 50px - 14px);
     overflow-y: auto;
 }
